--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     </second-nav>
     <section id="home">
         <h2 data-aos="zoom-in" data-aos-duration="2400">WELCOME TO SAINT CATHERINE'S PARISH</h2>
-        <p data-aos="fade-right" data-aos-duration="2150">The Community of God's People based in Alagbado, Lagos, working through the Catholic Faith to live out Christ's great commandments to love God and to love our neighbor as ourselves.</p>
+        <p data-aos="fade-right" data-aos-duration="2150">The Community of God's People based in Alakuko and its environs, working through the Catholic Faith to live out Christ's great commandments to love God and to love our neighbor as ourselves.</p>
         <div data-aos="zoom-in" data-aos-duration="2150" class="btn">
             <a class="gold" href="https://bit.ly/pdsp2020" rel="flashfg[purple]">Become Parishioner</a>
-            <a class="pink" href="update.html" rel="flashfg[black]">Updates</a>
+            <a class="pink" href="update.html" rel="flashfg[black]"> News Updates</a>
         </div>
     </section>
     <section id="features">
