--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="keywords" content="St. Catherine Catholic Church Alakuko, Lagos, Nigeria">
     <meta name="description" content="Addresses and contact information of St. Catherine Catholic Church Alakuko, Lagos.">
-    <meta name="theme-color" content="#0e3959">
-    <meta name="msapplication-navbutton-color" content="#0e3959">
+    <meta name="theme-color" content="#03a9f5">
+    <meta name="msapplication-navbutton-color" content="#03a9f5">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="author" content="SSAcademy">
