--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <div data-aos="flip-right" data-aos-duration="2150" class="fea-box">
                 <i class="fas fa-church"></i>
                 <h3>Holy Masses</h3>
-                <p>Worship with us as we celebrate Holy Mass on sundays at 7:00am, 9:00am and 6:00pm. <br> On weekdays: Monday-Wednesday and Friday...6:30am and 6:30pm, Thursdays...12:30pm, Saturdays...8:30am, Public Holidays...7am <br> Exposition of the
-                    Blessed Sacrament: Every Wednesday. <br> Confession: Every Saturday except last saturday of the month by 5:00pm</p>
+                <p>Worship with us as we celebrate Holy Mass <b>on sundays</b> at 7:00am, 9:00am and 6:00pm. <br> <b>On weekdays:</b> Monday-Wednesday and Friday...6:30am and 6:30pm, Thursdays...12:30pm, Saturdays...8:30am, Public Holidays...7am <br><b>Exposition
+                    of the Blessed Sacrament:</b> Every Wednesday. <br> <b>Confession:</b> Every Saturday except last saturday of the month by 5:00pm</p>
             </div>
             <div data-aos="flip-right" data-aos-duration="2150" class="fea-box" href="Account Details">
                 <i class="fas fa-credit-card"></i>
