--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     <section id="last">
         <footer>
             <ul class="social_icon">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/scathos"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC_GtJGkPxj5WbSTyR4dK4tg"><i class="fab fa-youtube"></i></a></li>
             </ul>
             <div class="footer-content">
                 <h2 class="head">St. Catherine Catholic Church, Alakuko, Lagos State</h2>
