--- a/apBiography.html
+++ b/apBiography.html
@@ -25,9 +25,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
     <!--==================== CSS ======================-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script type="text/javascript" src="staticlogo.js">
+    <script type="text/javascript" src="pstaticlogo.js">
         /***********************************************
          * Site Logo script- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
          * Please keep this notice intact
