--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <title>St. Catherine Catholic Church Alakuko | Home</title>
 </head>
 
-<body>
+<body onload="show_clock()">
     <nav>
         <div class="header">
             <div class="column1">
@@ -172,6 +172,7 @@
     </section>
     <!--==================== Script ======================-->
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="liveclock.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
