--- a/pastoralteam.html
+++ b/pastoralteam.html
@@ -28,8 +28,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.css">
     <!--==================== CSS ======================-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="staticlogo.js">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script type="text/javascript" src="pstaticlogo.js">
         /***********************************************
          * Site Logo script- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
          * Please keep this notice intact
