--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" type="text/css" href="contact.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script type="text/javascript" src="staticlogo.js">
+    <script type="text/javascript" src="cstaticlogo.js">
         /***********************************************
          * Site Logo script- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
          * Please keep this notice intact
