--- a/ngallery.html
+++ b/ngallery.html
@@ -27,7 +27,7 @@
     <!--==================== CSS ======================-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script type="text/javascript" src="pstaticlogo.js">
+    <script type="text/javascript" src="pgstaticlogo.js">
         /***********************************************
          * Site Logo script- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
          * Please keep this notice intact
