--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
     <!--==================== CSS ======================-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script type="text/javascript" src="flashinglinks.js">
         /***********************************************
          * Flashing Link Script- (c) Dynamic Drive (www.dynamicdrive.com)
